--- a/angular.json
+++ b/angular.json
@@ -6,6 +6,9 @@
     "angular-app-test": {
       "projectType": "application",
       "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        },
         "@schematics/angular:application": {
           "strict": true
         }
@@ -27,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+               "src/theme.scss"
             ],
             "scripts": []
           },
@@ -94,7 +98,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/theme.scss"
             ],
             "scripts": []
           }
@@ -102,5 +107,7 @@
       }
     }
   },
-  "defaultProject": "angular-app-test"
+  "cli": {
+    "analytics": false
+  }
 }
